crates/shannon-core/tests/snapshots/compact_selector_snapshot__compact_selector__below_threshold.snap
---
source: crates/shannon-core/tests/compact_selector_snapshot.rs
expression: format(&outcome)
---
strategy: token_based
reason:   below_threshold
