crates/shannon-core/tests/snapshots/compact_selector_snapshot__compact_selector__code_heavy.snap
---
source: crates/shannon-core/tests/compact_selector_snapshot.rs
expression: format(&outcome)
---
strategy: summary_based
reason:   code_heavy
