crates/shannon-core/tests/snapshots/compact_selector_snapshot__compact_selector__message_heavy.snap
---
source: crates/shannon-core/tests/compact_selector_snapshot.rs
expression: format(&outcome)
---
strategy: summary_based
reason:   message_heavy
