crates/shannon-core/tests/snapshots/compact_selector_snapshot__compact_selector__token_dense.snap
---
source: crates/shannon-core/tests/compact_selector_snapshot.rs
expression: format(&outcome)
---
strategy: token_based
reason:   token_dense
